2006-06-06  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am: added $(GNOMECC_CAPPLETS_LIBS)

2006-02-17  Rodrigo Moya <rodrigo@novell.com>

	Fixes #327021

	* main.c (setup_dialog): don't unref the GladeXML structure, it's
	needed in the callbacks.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: (setup_font_sample): Fix compiler warnings.

2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* font-properties.glade:
	* main.c: (application_font_to_gconf), (application_font_changed),
	(setup_dialog), (cb_show_details), (main):
	port of the font capplet to gtk_font_button and some cleanup, 
	patch from paolo borelli <pborelli@katamail.com> (Closes: #160016).

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* font-properties.glade:
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 
	to not set "close" as the default button (Closes: #98202).

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install .desktop file in $(datadir)/applications.
	
	* font-properties.desktop.in: add OnlyShowIn=GNOME;

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* main.c: (setup_dialog):
	Use themed iconf for WM hint.

2004-05-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=142190
	http://bugzilla.gnome.org/show_bug.cgi?id=142191
	* font-properties.glade : fix conflicting mnemonics

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=134446
	* font-properties.glade : removed space

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3
