@@ -1,3 +1,10 @@
+2007-01-07  Thomas Wood  <thos@gnome.org>
+
+	Based on patch by: Gabor Kelemen <kelemeng@gnome.hu>
+
+	* main.c: (application_font_to_gconf): Fixes bug 335963 ("Font may be
+	too large" dialog unclear).
+
 2006-06-06  Sergey Udaltsov <svu@gnome.org>
 
 	* Makefile.am: added $(GNOMECC_CAPPLETS_LIBS)
